<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Enter your search term</string>
    <string name="label_search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="filter_menu">Filter</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="label_img_size">Image Size</string>
    <string name="label_color_filter">Color Filter</string>
    <string name="label_img_type">Image Type</string>
    <string name="label_site_filter">Site Filter</string>
    <string name="label_save">Save</string>
    <string name="hint_site_filter">yahoo.com</string>
    <string name="img_sizes_prompt">Select Image Size</string>
    <string name="img_types_prompt">Select Image Size</string>
    <string name="colors_prompt">Select Image Size</string>
    <string name="no_query_string">Please enter some search term first</string>
    <string name="filter_title">Search Filter</string>
    
</resources>
