<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvImageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_img_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spImgSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@+string/img_sizes_prompt" 
                android:entries="@array/image_sizes"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_color_filter"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/colors_prompt"
                android:entries="@array/colors" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvImgType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_img_type"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spImgType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:prompt="@string/img_types_prompt"
                android:entries="@array/image_types"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSiteFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_site_filter"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etSiteFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_site_filter" >

                <requestFocus />
            </EditText>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onSubmit"
        android:text="@string/label_save" />

</RelativeLayout>